--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "string": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "xstring": "c"
     }
 }
