--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,26 +1,26 @@
 {
-	"version": "2.0.0",
-	"tasks": [
-		{
-			"type": "cppbuild",
-			"label": "C/C++: gcc.exe build active file",
-			"command": "C:\\Dev\\msys64\\mingw64\\bin\\gcc.exe",
-			"args": [
-				"-g",
-				"${workspaceFolder}\\main.c",
-				"${workspaceFolder}\\my_function.c",
-				"${workspaceFolder}\\test_function.c",
-				"-o",
-				"${workspaceFolder}\\test.exe"
-			],
-			"options": {
-				"cwd": "${fileDirname}"
-			},
-			"problemMatcher": [
-				"$gcc"
-			],
-			"group": "build",
-			"detail": "compiler: C:\\Dev\\msys64\\mingw64\\bin\\gcc.exe"
-		}
-	]
+    "version": "2.0.0",
+    "tasks": [
+        {
+            "type": "cppbuild",
+            "label": "C/C++: gcc.exe build active file",
+            "command": "C:\\msys64\\mingw64\\bin\\gcc.exe",
+            "args": [
+                "-g",
+                "${workspaceFolder}\\main.c",
+                "${workspaceFolder}\\my_function.c",
+                "${workspaceFolder}\\test_function.c",
+                "-o",
+                "${workspaceFolder}\\test.exe"
+            ],
+            "options": {
+                "cwd": "C:\\msys64\\mingw64\\bin"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": "build",
+            "detail": "compiler: C:\\msys64\\mingw64\\bin\\gcc.exe"
+        },    
+    ]
 }
