--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,11 +11,11 @@
             "program": "${workspaceFolder}\\test.exe",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "C:\\msys64\\mingw64\\bin",
+            "cwd": "C:\\Ruby31-x64\\msys64\\mingw64\\bin",
             "environment": [],
             "externalConsole": true,
             "MIMode": "gdb",
-            "miDebuggerPath": "C:\\msys64\\mingw64\\bin\\gdb.exe",
+            "miDebuggerPath": "C:\\Ruby31-x64\\msys64\\mingw64\\bin\\gdb.exe",
             "setupCommands": [
                 {
                     "description": "Enable pretty-printing for gdb",
