--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,10 +7,7 @@
             "command": "C:\\Ruby31-x64\\msys64\\mingw64\\bin\\gcc.exe",
             "args": [
                 "-g",
-                "${workspaceFolder}\\main.c",
-                "${workspaceFolder}\\my_function.c",
-                "${workspaceFolder}\\test_function.c",
-                "${workspaceFolder}\\driver_info.c",
+                "${workspaceFolder}\\*.c",
                 "-o",
                 "${workspaceFolder}\\test.exe"
             ],
