Add sort_token function

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,8 @@
             "args": [
                 "-g",
                 "${workspaceFolder}\\*.c",
+                "${workspaceFolder}\\driver_info\\*.c",
+                "${workspaceFolder}\\sort_token\\*.c",
                 "-o",
                 "${workspaceFolder}\\test.exe"
             ],
