--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "command": "C:\\Ruby31-x64\\msys64\\mingw64\\bin\\gcc.exe",
             "args": [
                 "-g",
-                "${workspaceFolder}\\c_example_code\\_mkdir.c",
+                "${workspaceFolder}\\c_example_code\\_rmdir.c",
                 // "${workspaceFolder}\\*.c",
                 // "${workspaceFolder}\\driver_info\\*.c",
                 // "${workspaceFolder}\\sort_token\\*.c",
