--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "command": "C:\\Ruby31-x64\\msys64\\mingw64\\bin\\gcc.exe",
             "args": [
                 "-g",
-                "${workspaceFolder}\\c_example_code\\const_pointer_vs_pointer_to_const.c",
+                "${workspaceFolder}\\c_example_code\\function_vs_andfunction.c",
                 // "${workspaceFolder}\\win_tunning\\win_tunning.c",
                 // "${workspaceFolder}\\*.c",
                 // "${workspaceFolder}\\driver_info\\*.c",
